--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,3 +83,13 @@
     @apply bg-background text-foreground font-sans antialiased;
   }
 }
+
+@layer utilities {
+  .lucide {
+    @apply size-4 stroke-2;
+  }
+
+  .lucide * {
+    vector-effect: non-scaling-stroke;
+  }
+}
